--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,9 @@
   "scripts": {
     "start": "nodemon index.js"
   },
+  "engines": {
+    "node": ">=14.20.1"
+  },
   "author": "itachouille",
   "license": "ISC",
   "dependencies": {
